--- a/.github/workflows/builddeploy.yaml
+++ b/.github/workflows/builddeploy.yaml
@@ -11,18 +11,25 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: '20'
+
       - name: Install Dependencies
         run: npm ci
+
       - name: Build
         run: npm run build
+        # Add this if React Router is implemented in the future (keeps /about from 404ing)
+        # env:
+        #   PUBLIC_URL: /${{ github.event.repository.name }}
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'build/.'
+          path: 'dist'
   deploy:
     needs: build
     runs-on: ubuntu-latest
